修改侧边栏的显示

--- a/docs/随笔/枯树时代.md
+++ b/docs/随笔/枯树时代.md
@@ -1,3 +1,7 @@
+---
+sidebar: false
+sidebarDepth: 0
+---
 # 枯树时代
 
 后来 ，他打来电话和我寒暄，聊了很多。世态炎寒，人情冷暖的巴拉巴拉的玩意儿东扯西拉的说了一大堆。 “这一年里很多事情都发生了骤变。” 那头一阵厚重的呼吸过后，他挂断了电话 ——题记
