--- a/docs/随笔/疫情之下.md
+++ b/docs/随笔/疫情之下.md
@@ -1,3 +1,7 @@
+---
+sidebar: false
+sidebarDepth: 0
+---
 # 疫情之下
 
 二零一九年末，一种不明来历的病毒在新年伊始时毫无征兆的突袭了W市，意料之中W市很快便被攻陷，众多医学机构随即展开研究，但无果。被感染的人只能等待死亡，而未感染的人则活在无尽的恐慌之中。
