修改主页样式

--- a/docs/触动函数相关/已封装好的函数.md
+++ b/docs/触动函数相关/已封装好的函数.md
@@ -195,13 +195,13 @@ local 当前界面 = 检索界面(界面列表)
 ```
 ::: 
 
-## 时间的获取
+## 时间的获取<Badge text="小技巧"/>
 ::: tip 为什么提到时间的问题
 先说说需求，我需要得到 **今天的时间** 和 **隔天（或者隔几天）** 的时间
 
-关于时间，其实触动精灵官方文档里面有说明 
+关于时间，其实触动精灵官方文档里面就有说明，但是很简洁。
 
-但是实际我在开发某邮箱项目时，在获取开始时间和结束时间时却碰到了以下问题，为此专门记录一下
+导致我在开发某邮箱项目过程中，在获取开始时间和结束时间时碰到了以下问题，为此专门记录一下
 ::: warning 问题如下：
 1. 时间偏移程度较夸张，最夸张一次是获取到了本机的初始时间  【1791-06-08】
 2. 时间无法自动校准为当月的大小月时间，于是引发了小月的天数只有30天，但是隔天却有31天的问题【2022-09-31】
