--- a/docs/触动函数相关/已封装好的函数.md
+++ b/docs/触动函数相关/已封装好的函数.md
@@ -195,7 +195,7 @@ local 当前界面 = 检索界面(界面列表)
 ```
 ::: 
 
-## 时间的获取<Badge text="小技巧"/>
+## 时间的获取<Badge text="小技巧"/>:grimacing:
 ::: tip 为什么提到时间的问题
 先说说需求，我需要得到 **今天的时间** 和 **隔天（或者隔几天）** 的时间
 
