--- a/docs/Python脚本相关/批量随机合成文件夹内的所有图片.md
+++ b/docs/Python脚本相关/批量随机合成文件夹内的所有图片.md
@@ -1,8 +1,10 @@
-# Python
+# 一. 批量随机合成文件夹内的所有图片
 
-## 1. 批量随机合成文件夹内的所有图片
+::: tip Document description
+由于最近的项目需要，所以记录下实现的过程
+:::
 
-### 我的思路
+## 我的思路
 ::: warning 思路说明
 0. 由于技术受限，以下分为3步
 
@@ -62,14 +64,14 @@ goto start
 > 将以下代码保存为 **`.py`** 文件
 ::: tip 配置说明： 
 
-|参数           | 示例           | 说明  |
-| ------------- |:-------------:| -----:|
-| IMAGES_PATH   | D:\\\1\\\2\\\   | 输入文件的路径 |
-| dir_path      | D:\\\1\\\new\\\  | 输出文件的路径 |
-| IMAGE_SIZE    | 300           |   每张图片的大小 |
-| IMAGE_ROW     | 4             |   行数量 |
-| IMAGE_COLUMN  | 4             |   列数量 |
-|os.system()    | D:/1/2/run.bat      |    批处理文件的路径 |
+|参数           | 类型  |      示例       | 说明  |
+| ------------- |:---:|:-------------:| -----:|
+| IMAGES_PATH   | str | D:\\\1\\\2\\\ | 输入文件的路径 |
+| dir_path      | str |D:\\\1\\\new\\\ |    输出文件的路径    |
+| IMAGE_SIZE    | int |       300       |    每张图片的大小    |
+| IMAGE_ROW     | int |        4        |      行数量      |
+| IMAGE_COLUMN  | int |        4        |      列数量      |
+|os.system()    | str | D:/1/2/run.bat  |   批处理文件的路径    |
 
 **文件数量必须是【整数倍】，否则无法拼接**
 :::
