样式文件更新，md文件内容修正

--- a/docs/触动函数相关/已封装好的函数.md
+++ b/docs/触动函数相关/已封装好的函数.md
@@ -11,7 +11,7 @@
 local MyJsonString = cjson.encode(MyTable);
 UIret,values = showUI(MyJsonString)
 ```
-那么，main里面需要定义字段成以下格式：
+方便使用全局，我习惯在main里面定义字段成以下格式：
 ```
 local 脚本功能 = values.脚本功能
 ```
@@ -195,7 +195,7 @@ local 当前界面 = 检索界面(界面列表)
 ```
 ::: 
 
-## 时间的获取<Badge text="小技巧"/>:grimacing:
+## 时间的获取<Badge text="小技巧"/>（很遗憾，依然不好用:grimacing:）
 ::: tip 为什么提到时间的问题
 先说说需求，我需要得到 **今天的时间** 和 **隔天（或者隔几天）** 的时间
 
