新增导航链接，其他md文件内容修正

--- a/docs/ffmpeg/水印添加.md
+++ b/docs/ffmpeg/水印添加.md
@@ -1,6 +1,7 @@
 # 一. ffmpeg水印添加
 
 #### ffmpeg下载地址：[ffmpeg官网地址](http://ffmpeg.org/)
+使用：将以下批处理保存为 **_.bat_** 文件
 
 ### 1. 批量视频添加水印(图片水印)
 
@@ -36,5 +37,6 @@ pause
 
 ```batch
 @ehco off
-ffmpeg -y -i C:\Users\USER\Desktop\ff\727dd4a94c50ec206d8e56d13c5e8cdf.mp4  -i C:\Users\USER\Desktop\ff\WechatIMG1093.jpeg -filter_complex "[0:v][1:v]overlay=0:0:enable=between(t\,5\,8) " -codec:a copy C:\Users\USER\Desktop\output.mp4pause
+ffmpeg -y -i C:\Users\USER\Desktop\ff\727dd4a94c50ec206d8e56d13c5e8cdf.mp4  -i C:\Users\USER\Desktop\ff\WechatIMG1093.jpeg -filter_complex "[0:v][1:v]overlay=0:0:enable=between(t\,5\,8) " -codec:a copy C:\Users\USER\Desktop\output.mp4
+pause
 ```
