--- a/docs/随笔/人间.md
+++ b/docs/随笔/人间.md
@@ -15,5 +15,5 @@ sidebarDepth: 0
 在之后就是很常规的喝茶吃饭，不得不说的是食物真的很鲜美，口感细腻还带着丝丝柔软的触感，特别是咬出汁的那一瞬间的迸发感，刺激着头颅的每一根神经，我甚至能清晰地感觉到脑中的电流在滋滋作响。周围的人喝着暗红色的酒，他们一边佯腔，一边拿着刀叉指指点点，我低头，这时正好一只猫从我脚边走过，然后瞬间消失在桌子底下，我佯装着俯身去捡故意掉落的筷子，却瞥见了桌底的铁链，它们胡乱的缠绕着，在猫经过桌底的那一刻，随后铁链变成眼镜蛇，他们一边缠绕着席位上宾客的脚踝，一边在疯狂的在喰食着已经血淋淋的猫，猫的瞳孔放大，死死地盯着我，随后肝肠落地，黑色的血液顺着桌角的水管抽取上去，最后汇聚在桌上的酒瓶中···
 餐后的活动是在一个金色的盒子里，这里金碧辉煌的景观和盒子外边堆积的尸体正好形成强烈的反差，用时也给出了死因。绿色桌对面的火烈鸟独立着腿，黑色的小腿赤裸在外，遇上我们投过去的目光，还不忘做几个或冷傲或妩媚的姿态。随后身边的人拿上手里的筹码开始往更深处的房子里走去，这里是一个隐蔽在墙内的房，里面的光线呈现丁达尔光晕效果，身边包围着的有狮子，老虎，鳄鱼，还有灰白色的狐狸和各色的兔子。穿着裸露的兔子肆意的摇晃着背后毛茸茸的尾巴，高挑的火烈鸟也不甘示弱，卖力的展现着它骨感的身材。或有时也有一些兔子过来和我搭话，可是最后我都没什么表示，于是说我太过于无趣，便生气的走开了。几个小时后，我在一间大房子里醒过来，房子里面飘着的是粉色的烟，我缕了下思路，在往旁边转过头看到的是一只陌生的兔子，他乖巧的躺在我的怀里，我的手臂环绕在了他的脖颈，最后他睁眼···
 城市上空的飞机肆无忌惮的飞，印着大写M的标签在阳光下晃得刺眼，我踢开还在我脚边磨蹭的蚯蚓，在飞出去的那一瞬间被撞成了一团奶灰色的云，随后融入了球状的天空中的云团里。周围的骷髅依然是病的要死，晦气的厉害。周围的人依然是提醒着我让我别走神，并一把强行将我带上印着双R纹身的狸猫背上，还没给我反应的机会，一瞬间我已经再次的被悬挂在了高空之上，周围的人也开始纷纷露出尖牙和背上的利刺，褪去黑色的西装，往更高的高空飞去。脚底下闪烁的是暗灰色的光，头顶上的城市砰砰作响，枪击声、爆炸声、飞机相撞的轰隆声，夜行动物发出的咕嗷声、死猪残喘的咯咯声、骨架互相碰撞的咔咔声、还有互相喘着粗气的未知的声音。它们环绕着中心的殿堂外面，形成一首壮丽的交响乐，最后汇聚成一种清脆的叮咚声，其实仔细听的话，是可以分辨出的，那，是铜互相碰撞的撞击声，空气中弥漫着的是死尸的腐臭，或还带着些许，铜的香味···    
-之后，我继续游走在各色的盒子中，周围的生物也开始更多元化。直到有一天，我被迫上了这趟列车，来到了这个新的世界，这里鸟在天上飞，鱼在火里游，脚下燃烧着的是暗红色的熔岩，苍穹之上闪烁着的是黑色的光，身边的树被烧得火红还在散发着腐臭，人们在泥沼中苟延残喘，背后的骷髅手持着长鞭，眼前的断崖之下堆积着的是成山的死尸。身后的旅人放下手提包，站立着被烧成了猩红的树，随后，我双手抱胸，也和着他们一起被烧得通红，直到最后，我们被烧得殆尽，大地上的火逐渐熄灭，我开始褪去残渣，长出白铮铮的骨架，暗红的肌肉开始缠绕，随着砰砰的跳动越来越强烈，黄色的皮肤也开始逐渐显现，最后长出毛发，我开始具备视力、嗅觉和感觉，同时也开始具备戒备和攻击性。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;之后，我继续游走在各色的盒子中，周围的生物也开始更多元化。直到有一天，我被迫上了这趟列车，来到了这个新的世界，这里鸟在天上飞，鱼在火里游，脚下燃烧着的是暗红色的熔岩，苍穹之上闪烁着的是黑色的光，身边的树被烧得火红还在散发着腐臭，人们在泥沼中苟延残喘，背后的骷髅手持着长鞭，眼前的断崖之下堆积着的是成山的死尸。身后的旅人放下手提包，站立着被烧成了猩红的树，随后，我双手抱胸，也和着他们一起被烧得通红，直到最后，我们被烧得殆尽，大地上的火逐渐熄灭，我开始褪去残渣，长出白铮铮的骨架，暗红的肌肉开始缠绕，随着砰砰的跳动越来越强烈，黄色的皮肤也开始逐渐显现，最后长出毛发，我开始具备视力、嗅觉和感觉，同时也开始具备戒备和攻击性。
 若干年后，当我再次来到这里时，这里已经变得通透而且彻底，而正当我盯着远处的峭壁入神时，身边的你提醒着让我别走神，随后我将你推进眼前的断崖之下，我站在崖边，看着你融进泥土，发出铜臭味，然后也被消失的透彻···
