新增作品集;取消搜索功能;修复主页底部提示

--- a/docs/个人作品集/个人作品集.md
+++ b/docs/个人作品集/个人作品集.md
@@ -4,8 +4,15 @@ sidebarDepth: 0
 ---
 # 个人作品集
 
-## 正在绘图中。。。
+## 持续绘图中。。。
+![]()
+
+<img class="personalPic" :src="('/home.jpg')">
 
 <style>
+    .personalPic{
+        line-height: 0 !important;
+        margin-top: -7px;
+    }
 
 </style>
