修复线上图片不显示BUG

--- a/docs/个人作品集/个人作品集.md
+++ b/docs/个人作品集/个人作品集.md
@@ -7,12 +7,11 @@ sidebarDepth: 0
 ## 持续绘图中。。。
 ![]()
 
-<img class="personalPic" :src="('/home.jpg')">
+<img class="personalPic" :src="('/vuepress/assets/img/home.jpg')">
 
 <style>
     .personalPic{
         line-height: 0 !important;
         margin-top: -7px;
     }
-
 </style>
