--- a/src/触动函数相关/已封装好的函数.md
+++ b/src/触动函数相关/已封装好的函数.md
@@ -6,15 +6,12 @@
 ::: tip 函数总览
 这里使用的是触动官方的库，相关的参数可以在[触动官网文档说明](https://helpdoc.touchsprite.com/dev_docs/12/2.html)里面查看，优先使用json格式 
 ::: warning 需要注意的是
-当前函数引入到main程序之后，之后有关界面的参数都必须带上自定义的前缀，例如我这里定义：
+当前函数引入到main程序之后，所有和有关界面的参数都必须带上自定义的前缀，例如我这里定义：
 ```
 local MyJsonString = cjson.encode(MyTable);
 UIret,values = showUI(MyJsonString)
 ```
-方便使用全局，我习惯在main里面定义字段成以下格式：
-```
-local 脚本功能 = values.脚本功能
-```
+那么接下来我所有和界面有关的ID都需要带上 **values**, 例如：`values.脚本功能`
 :::
 
 ::: tip 使用:
@@ -57,6 +54,15 @@ MyTable = {
                 ["width"] = -1,
                 ["nowrap"] = 1,
             },
+            {
+                ["type"] = "ComboBox",            
+                ["id"] = "脚本功能",                      
+                ["list"] = "功能1,功能2,----更多可定制功能----",   
+                ["select"] = "1",                  	 -- 选填，0，默认选中项 id
+                ["scale"] = 0.15,                    -- 选填，1，图片缩放比例
+                ["width"] = -1,
+                ["countperline"] = 0,			
+            },
         }
     }
 }
@@ -69,7 +75,7 @@ require("TSLib")
 require("界面")  
 json = ts.json  --使用 JSON 模块前必须插入这一句
 if UIret == 1 then
-	mSleep(1000)
+	-- 脚本逻辑
 else
 	toast("取消操作")
 	return false
@@ -79,7 +85,7 @@ end
 
 ## 防lua卡流程 以及 协程函数
 ::: tip 该方法的主要作用：
-为了解决在运行触动精灵时，遇到不识别的界面或者文字导致流程卡死不继续的问题
+为了解决在运行触动精灵时遇到不识别的界面或者文字导致流程卡死不继续的问题
 ::: warning 一些参数的说明
 **数量**- 运行的参数，可为其他 
 
@@ -91,40 +97,48 @@ end
 
 :::
 ```lua
----------------------下面是倒计时，通过全局变量1调用------------------
-for var = 1, 数量 do
+-------------防卡-------------------------
+for var = 1, values.注册数量 do
 	local thread_id = thread.create(
 		function()
-			流程()
-			--主程序()
+			流程()  --你的脚本程序
 		end,{
 			callBack = function()
 				--协程结束会调用，不论是错误、异常、正常结束
+				--toast("结束了")
 			end,
 			catchBack = function(exp)
 				--协程异常结束,异常是脚本调用了 throw 激发的，exp 是 table,exp.message 是异常原因
-				--其他函数
+				toast("超时或异常,脚本结束")
 			end
 		})
-	mSleep(1000)    
-
+	mSleep(1000)
+	
+	---------------------下面是倒计时，通过全局变量1调用------------------
 	local 防卡倒计时
-    local 时间间隔
-	local 注册等待 =时间间隔 * 1000
-	for  ii= 1,防卡时间/10,1 do
-		防卡倒计时=(60-ii+1)*10
-		--toast('防卡倒计时：'..防卡倒计时..'秒',1)
+	local 注册等待 = values.注册间隔 * 1000
+	for ii= 1, values.防卡时间/10, 1 do
+		防卡倒计时= ((values.防卡时间/10) - ii + 1) * 10
+-- 		toast("防卡倒计时："..防卡倒计时, 1)
 		mSleep(2000)
 		if 全局变量1==1 then
-            --其他函数
+		    local 计时单位
+		    if tonumber(values.注册间隔) < 60 then
+		        计时单位 = "秒"
+		        toast('注册成功，重新计时，等待'.. values.注册间隔 ..计时单位,1)
+		    else
+		        计时单位 = "分钟"
+		        toast('注册成功，重新计时，等待'..((注册等待/1000)/60)..计时单位,1)
+		    end
+			mSleep(注册等待)   -- 注册完成等待
 			break
 		elseif 全局变量1==2 then
-            --其他函数
-		    toast('异常，重新开始',1)
+		    toast('注册异常，脚本重新开始',1)
 			break
+		end
 		mSleep(5000)
-		if ii==防卡时间/10 then
-			toast('流程异常或超时',1)
+		if ii==values.防卡时间/10 then
+			toast('超时！脚本重新开始',1)
 			全局变量1=2
 		end
 	end
@@ -133,9 +147,7 @@ for var = 1, 数量 do
 	--等待所有协程结束
 	thread.waitAllThreadExit()
 	mSleep(1000)
-	if 全局变量1==2 then
-	    --其他函数
-	end
+	全局变量1=0
 	mSleep(500)
 end
 ```
@@ -147,13 +159,13 @@ end
 
 使用：ocrText(顶部坐标,底部坐标,0)
 ```lua
-local ocr_Create = ocrText(142,201,603,259,0)   --识别 XXX 文字
+local ocr_Create = ocrText(142,201,603,259,0)   --识别 XXX 文字   0代表识别英文数字，1代表识别中文汉字
 ```
 这也是我后期开发常用的方法，对于一些APP的界面识别很实用！
 ::: 
 
 ### 界面特征识别
-::: tip 界面特征识别较为复杂，分步骤进行
+::: tip 界面特征识别较为复杂，分多步骤进行
 1. **首先创建一个用于装载界面特征的table**
 ```lua
 function 检索界面(界面列表)         --返回界面名字(文本)
@@ -199,9 +211,7 @@ local 当前界面 = 检索界面(界面列表)
 ::: tip 为什么提到时间的问题
 先说说需求，我需要得到 **今天的时间** 和 **隔天（或者隔几天）** 的时间
 
-关于时间，其实触动精灵官方文档里面就有说明，但是很简洁。
-
-导致我在开发某邮箱项目过程中，在获取开始时间和结束时间时碰到了以下问题，为此专门记录一下
+关于时间，其实触动精灵官方文档里面就有说明，但是很简洁，导致我在开发某邮箱项目过程中，在获取开始时间和结束时间时碰到了以下问题，为此专门记录一下
 ::: warning 问题如下：
 1. 时间偏移程度较夸张，最夸张一次是获取到了本机的初始时间  【1791-06-08】
 2. 时间无法自动校准为当月的大小月时间，于是引发了小月的天数只有30天，但是隔天却有31天的问题【2022-09-31】
@@ -383,7 +393,7 @@ end
 2. 每次运行删除文件的首行内容，具体使用场景可根据自身需求来使用，我一般是用于账号的批量化登录
 ::: 
 ```lua
-local 文件路径 = './XXX/XXX文件'
+-------删除首行：先读取文件到table，然后修改，再清除文件内容，最后重载写入到文件
 function 读取文本(file)
 	local fileTab = {}
 	local line = file:read()
@@ -403,21 +413,26 @@ function 写入文件(file,fileTab)
 	end
 end
 
-function 删除首行()
+function 删除首行(需要删除文件的路径)
 	toast("开始删除首行")
-	local 打开文件 = io.open(文件路径)
+	local 打开文件 = io.open(需要删除文件的路径)
 	if 打开文件 then
 		local tab = 读取文本(打开文件)
 		打开文件:close()
 		table.remove(tab,1)
-		local 文件替换 = io.open(文件路径,"w")
+		local 文件替换 = io.open(需要删除文件的路径,"w")
 		if 文件替换 then 
 			写入文件(文件替换,tab)
 			文件替换:close()
 		end
+	else
+	    dialog("删除失败")
 	end
 end
 ```
+::: tip 调用
+直接使用：`删除首行(需要删除文件的路径)`
+::: 
 
 ### 根据指定格式读取首行并拆分
 ::: tip 读取首行
@@ -427,48 +442,53 @@ end
 :::
 
 ```lua
---读取文件内容   --将指定文件中的内容按行读取  分隔符 “ | ” 例如 123456|654321
+-- 读取文件内容   --将指定文件中的内容按行读取  分隔符 “ | ” 例如 123456|654321
+-- 使用： 使用方法得到一串数组，然后直接 string[i] 提取数据即可 ，例如：first_string = 获取本地文件()[1]
 local ts = require("ts")
-function 读取首行()
-	function readFile(path)
-    local file = io.open(path,"r");
-		if file then
-			local _list = {};
-			for l in file:lines() do
-				table.insert(_list,l)
-			end
-			file:close();
-			return _list
-		end
-	end
-	--检测指定文件是否存在
-	function file_exists(file_name)
-		local f = io.open(file_name)	
-		--f:close()
-		return f ~= nil and f:close()
-	end
-	bool = file_exists(文件路径)
-	if bool then
-	    list = readFile(文件路径)
-    	if #list > 0 then
-    		for  i=1, 1,1  do
-    			local 首行 = list[i]
-    			local str = 首行:split("----") --自定义格式
-    			Twitter手机号 = str[1]    
-    			文件内容1 = str[2]
-    			文件内容2 = str[3]:rtrim()
-    			mSleep(1000)
-    		end
-    	else
-		   dialog("文件内容为空")
-		   lua_exit()
-    	end
-	else
-		dialog("文件不存在",0)
-		lua_exit()
-	end
+function 获取本地文件(文件路径,分割符号)
+    function readFile(path)
+        local file = io.open(path,"r");
+        if file then
+            local _list = {};
+            for l in file:lines() do
+                table.insert(_list,l)
+            end
+            file:close();
+            return _list
+        end
+    end
+    
+    --检测指定文件是否存在
+    function file_exists(file_name)
+        local f = io.open(file_name)
+        return f ~= nil and f:close()
+    end
+    
+    bool = file_exists(文件路径)
+    if bool then
+        list = readFile(文件路径)
+        if #list > 0 then
+            --for  i=1, #list,1  do
+            for  i=1, 1,1  do
+                首行读取 = list[i]:split(分割符号)
+                mSleep(1000)
+            end
+        else
+            dialog("本地文件内容为空！！！")
+            lua_exit()
+        end
+    else
+        dialog("文件不存在",0)
+        lua_exit()
+    end
+    return 首行读取
 end
+
 ```
+::: tip 调用
+直接使用，例如：`local nameuser = 获取本地文件('/var/mobile/test.txt','----')[1]`
+::: 
+
 ### 文件的保存
 :::tip 说明
 仅仅用来保存文件功能，触动官方文档也有说明
