更新版本，去除赘余插件

--- a/src/更新文档.md
+++ b/src/更新文档.md
@@ -10,6 +10,12 @@ sticky: false
 
 ##### 该文件包含站点文件的所有显着更改
 
+## v2.0.4 (2024-03-04)
+### Features
+- ##### Upgrade theme version to `V2.0.0-rc.27`
+### BUG Fixes
+- ##### Modify MD document content
+
 ## v2.0.3 (2023-04-10)
 ### Features
 - ##### Upgrade theme version to `V2.0.0-beta.201`
